Refactor: updated SecureSession lifecycle and optimized file reading
Integrated LockManager into LoginActivity and refactored FileRepository to use java.nio for more efficient I/O. Updated the SecureSession singleton pattern to use separate init and getInstance methods.